--- a/src/links.html
+++ b/src/links.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+
+    <p>Moview Reviews:
+        <ul>
+            <li><a href="http://www.empireonline.com">Empire</a></li>
+            <li><a href="http://www.rottentomatoes.com">Rotten Tomatoes</a></li>
+            <li><a href="http://www.variety.com">Variety</a></li>
+
+
+
+
+
+    </ul>
+    </p>
+
+<p>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">About</a> </li>
+        <li><a href="movies.html">Movies</a></li>
+    </ul>
+
+</p>
+
+<p>
+
+    <a href="mailto:praiseoyewole560@gmail.com">Email praise</a>
+</p>
+
+<p>
+    <a href="http://www.indb.com" target="blank">Internet Movie Database</a>(OPENS IN NEW WINDOW)
+</p>
+
+    <h1 id="top">Film-Making Terms</h1>
+    <a href="#arc_shot">Arc Shot</a><br />
+    <a href="#interlude">Interlude</a><br />
+    <a href="#prologue">Prologue</a><br /><br />
+    <h2 id="arc_shot">Arc Shot</h2>
+    <p>A shot in which the subject is photographed by an
+        encircling or moving camera</p>
+    <h2 id="interlude">Interlude</h2>
+    <p>A brief, intervening film scene or sequence, not
+        specifically tied to the plot, that appears
+        within a film</p>
+    <h2 id="prologue">Prologue</h2>
+    <p>A speech, preface, introduction, or brief scene
+        preceding the the main action or plot of a film;
+        contrast to epilogue</p>
+    <p><a href="#top">Top</a></p>
+
+
 </body>
 </html>
